Added a new endpoint to get all groups
